--- a/docker_pytorch_srv_test/Pipfile
+++ b/docker_pytorch_srv_test/Pipfile
@@ -7,8 +7,9 @@ name = "pypi"
 torchserve = "*"
 torch-model-archiver = "*"
 transformers = "*"
+requests = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.11"
