--- a/docker_pytorch_srv_test/config.properties
+++ b/docker_pytorch_srv_test/config.properties
@@ -8,11 +8,45 @@ workflow_store=/home/model-server/wf-store
 NUM_WORKERS=1
 async_logging=true
 # model_snapshot={\n  "name"\: "20200911130049238-startup.cfg",\n  "modelCount"\: 1,\n  "created"\: 1599822049240,\n  "models"\: {\n    "enner"\: {\n      "1.0"\: {\n        "defaultVersion"\: true,\n        "marName"\: "en-bert-ner.mar",\n        "minWorkers"\: 1,\n        "maxWorkers"\: 1,\n        "batchSize"\: 1,\n        "maxBatchDelay"\: 100,\n        "responseTimeout"\: 120\n      }\n    }\n  }\n}
+
 models={\
   "xsumm": {\
     "1.0": {\
         "defaultVersion": true,\
         "marName": "xsumm-sf.mar",\
+        "minWorkers": 1,\
+        "maxWorkers": 1,\
+        "batchSize": 1,\
+        "maxBatchDelay": 100,\
+        "responseTimeout": 120\
+    }\
+  },\
+  "xsenti": {\
+    "1.0": {\
+        "defaultVersion": true,\
+        "marName": "xsenti-nlptown.mar",\
+        "minWorkers": 1,\
+        "maxWorkers": 1,\
+        "batchSize": 1,\
+        "maxBatchDelay": 100,\
+        "responseTimeout": 120\
+    }\
+  },\
+  "sner": {\
+    "1.0": {\
+        "defaultVersion": true,\
+        "marName": "sv-bert-ner.mar",\
+        "minWorkers": 1,\
+        "maxWorkers": 1,\
+        "batchSize": 1,\
+        "maxBatchDelay": 100,\
+        "responseTimeout": 120\
+    }\
+  },\
+  "enner": {\
+    "1.0": {\
+        "defaultVersion": true,\
+        "marName": "en-bert-ner.mar",\
         "minWorkers": 1,\
         "maxWorkers": 1,\
         "batchSize": 1,\
