--- a/docker_pytorch_srv_test/docker-compose.yml
+++ b/docker_pytorch_srv_test/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   dockerpytorchsrvtest:
-    image: dockerpytorchsrvtest
+    image: pytorchsrv
     build:
       context: .
       dockerfile: ./Dockerfile
@@ -11,8 +11,13 @@ services:
       - 8081:8081
     volumes:
       - type: bind
-        source: ./xsumm-sf.mar
+        source: ./model_mars/xsumm-sf.mar
         target: /home/model-server/model-store/xsumm-sf.mar
+      - type: bind
+        source: ./model_mars/xsenti-nlptown.mar
+        target: /home/model-server/model-store/xsenti-nlptown.mar
+
+
     # volumes:
     #  - xsumm_mar:/home/model-server/model-store/
 volumes:
